[package]
name = "fleet"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NixOS fleet lifecycle CLI with DAG workflow orchestration"
repository = "https://github.com/pleme-io/fleet"

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
serde_yaml_ng = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
